Fix depandabot alerts + Update Readme

--- a/_posts/2024-07-11-sfrrt.md
+++ b/_posts/2024-07-11-sfrrt.md
@@ -5,5 +5,5 @@ title: Clutter-Aware Spill-Free Liquid Transport
 feature_image: "https://picsum.photos/2560/600?image=872"
 permalink: sfrrt
 ---
-Clutter-Aware Spill-Free Liquid Transport via Learned Dynamics: open-source code + supplementary video
+TBD: Clutter-Aware Spill-Free Liquid Transport via Learned Dynamics: open-source code + supplementary video
 
