Update website with links

--- a/_posts/2024-07-11-sfrrt.md
+++ b/_posts/2024-07-11-sfrrt.md
@@ -5,5 +5,24 @@ title: Clutter-Aware Spill-Free Liquid Transport
 feature_image: "https://picsum.photos/2560/600?image=872"
 permalink: sfrrt
 ---
-TBD: Clutter-Aware Spill-Free Liquid Transport via Learned Dynamics: open-source code + supplementary video
+Paper: [link](https://arxiv.org/abs/2408.00215)
 
+Repository: [link](https://github.com/HIRO-group/trajectory-model)
+
+Data: [link](https://o365coloradoedu-my.sharepoint.com/:f:/g/personal/avab4907_colorado_edu/EhLxWaRCAXVNhUXhQXufFnwBKscaD8d4D3sEeYsNtqN_KA)
+
+Video: TBD
+
+Abstract: In this work, we present a novel algorithm to perform spill-free handling of open-top liquid-filled containers that operates in cluttered environments. By allowing liquid-filled containers to be tilted at higher angles and enabling motion along all axes of end-effector orientation, our work extends the reachable space and enhances maneuverability around obstacles, broadening the range of feasible scenarios. Our key contributions include: i) generating spill-free paths through the use of RRT* with an informed sampler that leverages container properties to avoid spill-inducing states (such as an upside-down container), ii) parameterizing the resulting path to generate spill-free trajectories through the implementation of a time parameterization algorithm, coupled with a transformer-based machine-learning model capable of classifying trajectories as spill-free or not. We validate our approach in real-world, obstacle-rich task settings using containers of various shapes and fill levels and demonstrate an extended solution space that is at least 3x larger than an existing approach.
+
+Citation: 
+```
+@inproceedings{abderezaei2024clutterawarespillfreeliquidtransport,
+  title={Clutter-Aware Spill-Free Liquid Transport via Learned Dynamics}, 
+  author={Abderezaei, Ava and Pasricha, Anuj and Klausenstock, Alex and Roncone, Alessandro},
+  year={2024},
+  booktitle={2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+}
+```
+
+This page is still being updated. Feel free to email me if you have any questions or are interested in collaboration. :) 
