--- a/_posts/2024-07-11-sfrrt.md
+++ b/_posts/2024-07-11-sfrrt.md
@@ -1,5 +1,5 @@
 ---
-title: Clutter-Aware Spill-Free Liquid Transport
+title: Clutter-Aware Spill-Free Liquid Transport Via Learned Dynamics
 # categories:
 # - Publications
 feature_image: "https://picsum.photos/2560/600?image=872"
